--- a/inventory-o.csproj
+++ b/inventory-o.csproj
@@ -3,12 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
+    <RootNamespace>inventory_o</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="QuestPDF" Version="2025.12.2" />
+    <PackageReference Include="QuestPDF" Version="2025.12.3" />
     <PackageReference Include="Spectre.Console" Version="0.54.0" />
   </ItemGroup>
 
